# perceive

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  deny.toml  justfile
.github/workflows/: ci.yml  pages.yml  wasm.yml
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
crates/a11y-rules/: Cargo.toml
crates/a11y-rules/src/: lib.rs
crates/perceive-color/: Cargo.toml  README.md
crates/perceive-color/benches/: contrast.rs
crates/perceive-color/src/: apca.rs  color.rs  lib.rs  oklch.rs  palette.rs  parse.rs  wcag.rs
crates/perceive-color/tests/: properties.rs  wcag_reference.rs
crates/perceive-cvd/: Cargo.toml  README.md
crates/perceive-cvd/src/: brettel.rs  lib.rs  types.rs  vienot.rs
crates/perceive-cvd/tests/: properties.rs  reference_values.rs
demo/: app.js  index.html  style.css
docs/: boring-software-goldmines.md  claude-chat.txt  code-review-framework.md  platform-tree.jsx  solo-dev-plugin-ideas.md  vpat-generation-market-is-wide-open.md
products/shopify-auditor/: Dockerfile
products/shopify-auditor/native/: Cargo.toml  package-lock.json  package.json
products/shopify-auditor/native/src/: lib.rs
products/shopify-auditor/scanner/: Cargo.toml
products/shopify-auditor/scanner/examples/: scan_dawn.rs
products/shopify-auditor/scanner/src/: css.rs  findings.rs  html.rs  lib.rs  liquid.rs  pipeline.rs
products/shopify-auditor/scanner/src/checks/: accessible_name.rs  alt_text.rs  aria.rs  bypass_blocks.rs  contrast.rs  focus_visible.rs  form_labels.rs  heading_labels.rs  headings.rs  input_purpose.rs  label_in_name.rs  language.rs  link_purpose.rs  mod.rs  page_title.rs  target_size.rs
products/shopify-auditor/validation/: package-lock.json  package.json  validate.mjs
products/shopify-auditor/web/: .env.example  .gitignore  package-lock.json  package.json  shopify.app.perceive-a11y-auditor.toml  shopify.app.toml  shopify.web.toml  vite.config.ts
products/shopify-auditor/web/app/: root.tsx
products/shopify-auditor/web/app/lib/: axe-wcag-map.ts  crypto.server.ts  db.server.ts  deep-scan-worker.mjs  deep-scan.server.ts  scan-summary.server.ts  scanner.server.ts  severity.ts  shopify.server.ts  theme-fetcher.server.ts  wcag-criteria.ts
products/shopify-auditor/web/app/routes/: _index.tsx  app._index.tsx  app.billing.confirm.tsx  app.billing.tsx  app.findings.$criterionId.tsx  app.history.$scanId.tsx  app.scan-status.tsx  app.scan.tsx  app.statement.tsx  app.tsx  auth.$.tsx  auth.login.tsx  internal.scan-results.tsx  public.report.$token.tsx  webhooks.tsx
products/shopify-auditor/web/prisma/: schema.prisma
products/shopify-auditor/web/prisma/migrations/20260318075046_init_with_report_token/: migration.sql
products/shopify-auditor/web/prisma/migrations/20260321000000_add_performance_indexes/: migration.sql
services/deep-scan-worker/: Dockerfile  fly.toml  package-lock.json  package.json  scan-engine.mjs  server.mjs
tests/: wasm_node_test.mjs
