[package]
name = "perceive-wasm"
description = "WASM bindings for perceive accessibility crates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
perceive-color.workspace = true
perceive-cvd.workspace = true
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[lints]
workspace = true
