[package]
name = "shopify-auditor-native"
description = "napi-rs bindings exposing the Shopify accessibility scanner to Node.js"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
shopify-auditor-scanner = { path = "../scanner" }
a11y-rules = { workspace = true }
perceive-color = { workspace = true, features = ["std"] }
napi = { version = "3", features = ["serde-json"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
