[package]
name = "shopify-auditor-scanner"
description = "WCAG 2.2 static analysis engine for Shopify Liquid themes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
a11y-rules = { workspace = true }
perceive-color = { workspace = true, features = ["std"] }
lol_html = "2"
lightningcss = "1.0.0-alpha.71"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
